# api-docs.yaml
@@ -10,11 +10,10 @@ servers:
     description: Local Development server
 components:
   securitySchemes:
-    cookieAuth:
-      type: apiKey
-      in: cookie
-      name: accessToken
-      description: Access token stored in httpOnly cookieAuth
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
 
 paths:
   /auth/login:
@@ -42,7 +41,7 @@ paths:
                 - password
       responses:
         "200":
-          description: Successful login, sets httpOnly cookie for tokens
+          description: Successful login, returns JWT access & refresh token
           content:
             application/json:
               schema:
@@ -65,6 +64,10 @@ paths:
                         format: email
                       name:
                         type: string
+                      accessToken:
+                        type: string
+                      refreshToken:
+                        type: string
         "400":
           description: Bad Request
         "401":
@@ -77,7 +80,7 @@ paths:
         - Auth
       summary: Get current authenticated user
       security:
-        - cookieAuth: []
+        - bearerAuth: []
       responses:
         "200":
           description: Successfully retrieved current user
@@ -109,7 +112,7 @@ paths:
       summary: Refresh access token
       tags: [Auth]
       security:
-        - cookieAuth: []
+        - bearerAuth: []
       responses:
         "200":
           description: New access token
@@ -124,6 +127,11 @@ paths:
                   message:
                     type: string
                     example: Successfully create a new access token
+                  data:
+                    type: object
+                    properties:
+                      accessToken:
+                        type: string
         "401":
           description: Unauthorized
           content:
@@ -148,40 +156,6 @@ paths:
                     example: false
                   message:
                     type: string
-  /auth/logout:
-    delete:
-      summary: Logout user
-      tags: [Auth]
-      security:
-        - cookieAuth: []
-      responses:
-        "200":
-          description: Logout successful
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                  message:
-                    type: string
-                    example: Successfully logout
-        "403":
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                    example: false
-                  message:
-                    type: string
-        "500":
-          description: Internal server error
-
   /news:
     get:
       summary: Get all news
@@ -256,7 +230,7 @@ paths:
       summary: Create a news item
       tags: [News]
       security:
-        - cookieAuth: []
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -375,7 +349,7 @@ paths:
       summary: Update a news item by ID
       tags: [News]
       security:
-        - cookieAuth: []
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -445,7 +419,7 @@ paths:
       summary: Delete a news item by ID
       tags: [News]
       security:
-        - cookieAuth: []
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
