# src/routes/auth.routes.ts
@@ -2,7 +2,6 @@ import { Router } from "express";
 import {
   getCurrentUser,
   login,
-  logout,
   refreshToken,
 } from "../controllers/auth.controller";
 import { authenticate } from "../middleware/auth.middleware";
@@ -11,6 +10,5 @@ const authRoutes = Router();
 authRoutes.post("/auth/login", login);
 authRoutes.get("/auth/me", authenticate, getCurrentUser);
 authRoutes.get("/auth/refresh", authenticate, refreshToken);
-authRoutes.delete("/auth/logout", authenticate, logout);
 
 export default authRoutes;
